Moved models to models.py, as it is default for Django. Implemented contest addition.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,6 @@
 
 {% block content %}
 <h3>О проекте</h3>
-<p>Это небольшая тестирующая система для заданий по информатике, реализованная на в учебных целях.</p>
+<p>Это небольшая тестирующая система для заданий по информатике, реализованная на Django в учебных целях.</p>
 <p>Ну типа контесты вооооот.</p>
 {% endblock %}
