--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -21,7 +21,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/tasks/">Контест</a></li>
+                <li><a href="/contests/">Контесты</a></li>
             </ul>
         </div>
     </div>
