--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -9,6 +9,9 @@
 {% endblock %}
 
 {% block content %}
+{% if task_active_list_is_empty %}
+В этом контесте пока нет задач...
+{% else %}
 <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-collapse collapse">
@@ -21,4 +24,6 @@
     </div>
 </nav>
 <h3>{{ task_name }}</h3>
+<p>{{ task_text }}</p>
+{% endif %}
 {% endblock %}
