--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -14,15 +14,15 @@
     <link href="{% static 'tweaks.css' %}" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/#">Тестирующая система</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/contests/">Контесты</a></li>
-            </ul>
+        <a class="navbar-brand" href="/#">Тестирующая система</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/contests/">Контесты</a>
+                </li>
+              </ul>
         </div>
     </div>
 </nav>
