--- a/templates/contests.html
+++ b/templates/contests.html
@@ -18,7 +18,7 @@
     {% if user_is_admin %}
     <form method="post">
         {% csrf_token %}
-        <button type="submit" class="btn btn-xs btn-danger" name="delete_contest" id="delete_contest" value="{{ contest_id }}">Удалить</button>
+        <button type="submit" class="btn btn-sm btn-danger" name="delete_contest" id="delete_contest" value="{{ contest_id }}">Удалить</button>
     </form>
     {% endif %}
 </li>
@@ -31,7 +31,7 @@
     <input type="text" class="form-control input-default" name="new_contest_name" id="new_contest_name"></input>
     {% if contest_name_error %}
     <div class="alert alert-danger" role="alert">
-        <strong>Ошибка ввода:</strong>{{ contest_name_error }}
+        <strong>Ошибка ввода: </strong>{{ contest_name_error }}
     </div>
     {% endif %}
     <p><button type="submit" class="btn btn-primary" id="add_contest">Добавить</button></p>
