Added info to main page. Messages translation.

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,15 @@
 {% block content %}
 <h3>О проекте</h3>
 <p>Это небольшая тестирующая система для заданий по информатике, реализованная на Django в учебных целях.</p>
-<p>Ну типа контесты вооооот.</p>
+<p>Система позволяет создавать и решать контесты с задачами.</p>
+<h3>Возможности</h3>
+<li>Учетная запись учителя, чтобы создавать контесты и задачи. Без входа - только просмотр и решение.</li>
+<li>Два типа задач: с текстовым ответом и с ответом в виде кода на python.</li>
+<li>Для оформления текста заданий учитель может использовать html.</li>
+<li>Автоматическая проверка заданий:
+    <ul>
+        <li>Для задач с ответом в виде текста - сравнение с эталоном.</li>
+        <li>Для задач с ответом в виде программы - запуск тестов.</li>
+    </ul>
+</li>
 {% endblock %}
