--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -91,7 +91,7 @@
 </form>
 {% if task_ans_type == 'C' %}
 <input type="hidden" name="form_descr" value="task_edit_tests"></input>
-<a class="btn btn-sm btn-primary" href="/tests/{{ task_id }}">Редактировать тесты</a>
+<p><a class="btn btn-sm btn-primary" href="/tests/{{ task_id }}">Редактировать тесты</a></p>
 {% endif %}
 {% endif %}
 {% autoescape off %}
